いろいろ修正

--- a/output/index.html
+++ b/output/index.html
@@ -3,8 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body>
-<h3>２０１２年度東京都カヌースラローム・ワイルドウォーター選手権大会<br>
-　兼　第６７回国民体育大会カヌー競技東京都予選会</h3>
+<h3>２０１３年度国民体育大会中国ブロック予選カヌースラローム・ワイルドウォーター選手権大会</h3>
 <br>
 <a href='xml/summary.xml'>summary</a><br>
 <br>
